syntax = "proto3";

package chat_v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/ArtEmerged/o_chat_server/pkg/chat_v1;chat_v1";


service ChatV1 {
    rpc CreateChat(CreateChatRequest) returns (CreateChatResponse);
    rpc DeleteChat(DeleteChatRequest) returns (DeleteChatResponse);
    rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
}

message CreateChatRequest {
    repeated string user_name = 1;
}
message CreateChatResponse {
    int64 id = 1;
}

message DeleteChatRequest {
    int64 id = 1;
}

message DeleteChatResponse {}

message SendMessageRequest {
    string from = 1;
    string text = 2;
    google.protobuf.Timestamp timestamp = 3;
}

message SendMessageResponse {}